# sync-hotstuff-erasure-coding

./: CMakeLists.txt  README.md
include/: code_function.h
include/hotstuff/: consensus.h  entity.h  hotstuff.h
src/: code_function.c  consensus.cpp  hotstuff.cpp
test/: CMakeLists.txt  test_function.c
